lax pic changes

--- a/sports.html
+++ b/sports.html
@@ -56,8 +56,8 @@
           quarter and after I win or lose I sub off the field. I prefer Lacrosse
           to any other sport it is my faveorite and I am number 11
         </p>
-        <img src="lax1.jpg" width="350px" height="300px">
-        <img src="lax2.jpg" width="350px" height="300px">
+        <img style="margin-left: 5%;"src="lax1.jpg" width="45%" height="60%">
+        <img src="lax2.jpg" width="45%" height="60%">
         <table>
           <tr>
             <th>Sunday</th>
