--- a/sports.html
+++ b/sports.html
@@ -57,7 +57,7 @@
           to any other sport it is my faveorite and I am number 11
         </p>
         <img style="margin-left: 5%;"src="lax1.jpg" width="45%" height="60%">
-        <img src="lax2.jpg" width="45%" height="60%">
+        <img src="lax2.jpg" width="1000px" height="60%">
         <table>
           <tr>
             <th>Sunday</th>
