--- a/sports.html
+++ b/sports.html
@@ -44,8 +44,8 @@
           outside linebacker and backup running my whole senior season. I was
           number 7!
         </p>
-        <img style="float: right; margin-right: 2%;" src="fb1.jpg" alt="tackle made by me" width="300px" height="350px">
-        <img style="float: right; margin-right: 2%;" src="fb2.jpg" alt="me carrying the ball" width="425px" height="300px">
+        <img style="float: right; margin-right: 2%;" src="fb1.jpg" alt="tackle made by me" width="45%" height="50%">
+        <img style="float: right; margin-right: 2%;" src="fb2.jpg" alt="me carrying the ball" width="50%" height="45%">
         </div>
         <div class="Lacrosse">
         <h3>Lacrosse</h3>
@@ -57,7 +57,7 @@
           to any other sport it is my faveorite and I am number 11
         </p>
         <img style="margin-left: 5%;"src="lax1.jpg" width="45%" height="60%">
-        <img src="lax2.jpg" width="1000px" height="60%">
+        <img src="lax2.jpg" width="45%" height="60%">
         <table>
           <tr>
             <th>Sunday</th>
